--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.5",
     "@tanstack/react-query": "^4.29.12",
     "antd": "^5.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-native": "^0.71.10",
+    "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.8.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-router-dom": "^6.12.1"
   },
   "devDependencies": {
